# rat_quickdb

./: .gitignore  2025-10-07-debugmodelmanagerrs.txt  2025-10-08-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION_GUIDE_0_3_0.md  README.en.md  README.ja.md  README.md  check_brackets.py  justfile  query_operations_sqlite.db-journal
.eva/docs/: adapter.md  architecture.md  cache.md  config.md  model.md  odm.md  other.md  pool.md  types.md  已有能力.md
.skills/rat-quickdb/: SKILL.md
docs/: datatype_guide.md  field_versioning.md  i18n_checklist.md  known_issues.md  mysql_limitations.md  postgresql_limitations.md  sqlite_adapter_refactoring.md  utc_time_recommendation.md
examples/: array_field_example.rs  basic_usage.rs  batch_operations_demo.rs  batch_operations_demo_mongodb.rs  batch_operations_demo_mysql.rs  batch_operations_demo_pgsql.rs  batch_update_demo.rs  cache_bypass_comparison_mongodb.rs  cache_bypass_comparison_mysql.rs  cache_bypass_comparison_pgsql.rs  cache_bypass_comparison_sqlite.rs  cache_performance_comparison.rs  cache_performance_comparison_mongodb.rs  cache_performance_comparison_mysql.rs  cache_performance_comparison_pgsql.rs  complex_query_demo.rs  complex_query_demo_mongodb.rs  complex_query_demo_mysql.rs  complex_query_demo_pgsql.rs  debug_model_manager.rs  drop_table_test.rs  field_types_test_pgsql.rs  field_types_test_sqlite.rs  field_versioning_sqlite.rs  find_array_comparison.rs  id_strategy_test.rs  id_strategy_test_mongodb.rs  id_strategy_test_mysql.rs  id_strategy_test_pgsql.rs  join_macro_database_alias_demo.rs  json_field_array_test.rs  json_field_array_test_pgsql.rs  json_field_numeric_query_pgsql.rs  manual_cache_cleanup_deprecated  manual_table_management.rs  manual_table_management_mongodb.rs  manual_table_management_mysql.rs  manual_table_management_pgsql.rs  model_definition.rs  model_definition_mongodb.rs  (+94 more)
python/: ARCHITECTURE.md  Cargo.toml  PYTHON_INTEGRATION_FIX_SUMMARY.md  build.rs  pyproject.toml  test_datavalue_conversion.py  test_datetime_rust_parsing.py
python/examples/: cache_performance_comparison.py.deprecated  cache_performance_comparison_l2.py  datetime_field_demo.py  graceful_shutdown.py.deprecated  model_definition.py  model_definition_mysql.py  model_definition_pgsql.py  mongodb_model_usage.py.deprecated  native_data_bridge_demo.py  test_code_isolation.py  test_model_decorator.py.deprecated  test_simple_register.py  test_uuid_auto_generate.py.deprecated
python/rat_quickdb_py/: __init__.py  model_decorator.py  utils.py
python/src/: bridge.rs  lib.rs  message.rs  model_bindings.rs
src/: cache.rs  config.rs  error.rs  id_generator.rs  join_macro.rs  lib.rs  manager.rs  model.rs  odm.rs  pool.rs  security.rs  serializer.rs  types.rs
src/adapter/: cached.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  postgres_utils.rs  query_builder.rs  sqlite.rs  utils.rs
src/adapter/mongodb/: adapter.rs  mod.rs  operations.rs  query.rs  query_builder.rs  schema.rs  utils.rs
src/adapter/mysql/: adapter.rs  data_conversion.rs  mod.rs  operations.rs  query.rs  query_builder.rs  schema.rs  utils.rs
src/adapter/postgres/: adapter.rs  mod.rs  operations.rs  query.rs  query_builder.rs  schema.rs  utils.rs
src/adapter/sqlite/: adapter.rs  data_conversion.rs  mod.rs  operations.rs  operations_helper.rs  query.rs  query_builder.rs  schema.rs  utils.rs
src/cache/: cache_manager.rs  key_generator.rs  mod.rs  operations.rs  query_cache.rs  record_cache.rs  stats.rs
src/config/: convenience.rs  core.rs  mod.rs
src/config/builders/: app_builder.rs  database_builder.rs  global_builder.rs  logging_builder.rs  mod.rs  pool_builder.rs
src/field_versioning/: ddl.rs  manager.rs  mod.rs  types.rs
src/i18n/: mod.rs
src/manager/: alias_type_map.rs  cache_ops.rs  database_ops.rs  maintenance.rs  manager.rs  mod.rs  model_ops.rs
src/model/: convenience.rs  data_conversion.rs  field_types.rs  macros.rs  manager.rs  mod.rs  traits.rs
src/odm/: global.rs  manager_core.rs  mod.rs  traits.rs  types.rs
src/pool/: config.rs  mod.rs  multi_connection_manager.rs  pool.rs  sqlite_worker.rs  types.rs
src/python_api/: json_queue_bridge.rs  mod.rs  simple_queue_bridge.rs
src/stored_procedure/: config.rs  mod.rs  types.rs
src/table/: manager.rs  mod.rs  schema.rs  version.rs
src/task_queue/: manager.rs  mod.rs  task.rs  worker.rs
src/types/: mod.rs  mongo_builder.rs  serde_helpers.rs
src/utils/: mod.rs  timezone.rs
tests/: basic_test.rs  test_mongodb_error_structure.rs  test_mysql_error_code.rs  test_pg_error_code.rs  test_pyo3_serialization.rs  test_sqlite_error_code.rs
(+27 files in other folders)
